--- a/index.html
+++ b/index.html
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
 
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-
-<img src="forkit.gif" id="octocat" alt="" />
-
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
-
-</body>
-</html>
-
+		<div class="blurb">
+			<h1>Hi there, I'm Hank Quinlan!</h1>
+			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+		</div> 
