delete and commit
commit

--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
----
-layout: default
-title: Avinash
----
+<!DOCTYPE html>
+<html>
+<head>
 
-		<div class="blurb">
-			<h1>Hi there, I'm Avinash Choudhary</h1>
-			<p>I'm best known for nothing. Don't trust me. <a href="/about">Read more about my life...</a></p>
-		</div> 
+    <title>Avinash Choudhary</title>
+	
+	<meta name="author" content="your name" />
+	<meta name="description" content="" />
+
+
+	<link rel="stylesheet" href="style.css" type="text/css" />
+	
+</head>
+<body>
+
+
+
+	<div id="page">
+		<div id="logo">
+			<h1><a href="/" id="logoLink">Avinash Choudhary</a></h1>
+		</div>
+		<div id="nav">
+			<ul>
+				<li><a href="home.html">Home</a></li>
+				<li><a href="academics.html">Academics</a></li>
+				<li><a href="interests.html">Personal Interests</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>	
+		</div>
+		<div id="content">
+			<h2>About</h2>
+			<p>
+				I am a third year undergrad student in the department of Computer Science and Engineering at IIT Kanpur.
+			</p>
+		</div>
+
+			<div id="footer">
+			<p>
+			Made by <a href="/" target="_blank">Avinash CHoudhary</a>
+			</p>
+		</div>
+	</div>
+</body>
+</html>
