--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
 			</ul>	
 		</div>
 		<div id="content">
-			<h2>About</h2>
+			<h2>About Me</h2>
 			<p>
-				I am a third year undergrad student in the department of Computer Science and Engineering at IIT Kanpur.
+				Hi, I am Avinash Choudhary, a third year undergrad student of the <a href="https://www.cse.iitk.ac.in/"> department of Computer Science and Engineering </a> at the <a href="http://iitk.ac.in/"> Indian Institue of Technology Kanpur</a>.
 			</p>
+                Currently I am residing in the Hall of residence 3 at IITK. My hometown is sikar(Rajasthan) and I did my schooling from Bhartiya Public School, sikar.
+			<p>
+
 		</div>
 
 			<div id="footer">
