--- a/academics.html
+++ b/academics.html
@@ -28,7 +28,7 @@
 			</ul>	
 		</div>
 		<div id="content">
-			<h2>About</h2>
+			<h2>Academics</h2>
 			<p>
 				Here is the list of some of the courses I have done.
 			</p>
@@ -70,6 +70,10 @@
         <tr>
             <td>CS345</td>
             <td>Advanced Data Structures and Algorithms</td>
+        </tr>
+        <tr>
+            <td>CS641</td>
+            <td>Modern Cryptology</td>
         </tr>
         <tr>
             <td>CS771</td>
