--- a/interests.html
+++ b/interests.html
@@ -30,7 +30,7 @@
 		<div id="content">
 			<h2>Hobbies</h2>
 			<p>
-				I spend a lot of my time listening to music. I really enjoy simple Rock music, Progressive and Experimental Rock and I am also into Heavy metal. Some of my favorite artists are <a href="www.pinkfloyd.com", color=blue>Pink Floyd</a>, Porcupine tree, Led Zeppellin, Queen, Iron-maiden and Red Hot Chili Peppers.
+				I spend a lot of my time listening to music. I really enjoy simple Rock music, Progressive and Experimental Rock and I am also into Heavy metal. Some of my favorite artists are Pink Floyd, Porcupine tree, Led Zeppellin, Queen, Iron-maiden and Red Hot Chili Peppers.
 			</p>
 			<p>
 				Apart from music, I also like travelling a lot. I have been to North India, East India and some parts of West India. I am also into biographies, currently I am reading Mein Kampf(Hitler's autobiography).
